--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,22 @@
   text-align: center;
 }
 
+
+.DrumCenter{
+  background-color:grey;
+  width: 70%;
+  height:100%;
+  align-items: center;
+  justify-content: center;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
 
+
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -20,6 +29,12 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.Grids_styling{
+  width: 60%;
+  justify-content: center;
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
